--- a/core/templates/test.html
+++ b/core/templates/test.html
@@ -230,23 +230,10 @@ $(document).ready(function() {
 
 <html>
 <body>
+<a target='ripple' href='http://bit.ly/brVgWk'><div style='width: 258px; height: 35px; color: rgb(0, 0, 0); font-size: 27pxpx; text-align: center; border: 2px solid black; background-color: rgb(210, 246, 208);'> 50% off Discount </div></a>
 
-<iframe src ="http://www.cnn.com" width="100%" height="300">
-  <p>Your browser does not support iframes.</p>
-</iframe>
-<iframe src="http://player.vimeo.com/video/14250788" width="400" height="300" frameborder="0"></iframe>
 
-<p><a href="http://vimeo.com/14250788">Founder Conference - David McClure</a> 
-   from 
-   <a href="http://vimeo.com/pointabout">Daniel R. Odio</a> 
-   on 
-   <a href="http://vimeo.com">Vimeo</a>.
-</p>
-<script type="text/javascript" src="http://cdn.widgetserver.com/syndication/subscriber/InsertWidget.js"></script>
-<script type="text/javascript">if (WIDGETBOX) WIDGETBOX.renderWidget('b1e063aa-8433-412d-83bc-3c1d0bb1d4a4');</script>
+</body>
 
-<noscript>Get the <a href="http://www.widgetbox.com/widget/html-text">HTML/Text Widget</a> widget and many other 
-                  <a href="http://www.widgetbox.com/">great free widgets</a> at <a href="http://www.widgetbox.com">Widgetbox</a>! Not seeing a widget? (<a href="http://docs.widgetbox.com/using-widgets/installing-widgets/why-cant-i-see-my-widget/">More info</a>)</noscript>
 
-<!-- Facebook Like Badge START --><div style="width: 100%;"><div style="background: #3B5998;padding: 5px;"><img src="http://www.facebook.com/images/fb_logo_small.png" alt="Facebook"/><img src="http://badge.facebook.com/badge/62503086648.1809480.1990756001.png" alt="" width="0" height="0"/></div><div style="background: #EDEFF4;display: block;border-right: 1px solid #D8DFEA;border-bottom: 1px solid #D8DFEA;border-left: 1px solid #D8DFEA;margin: 0px;padding: 0px 0px 5px 0px;"><div style="background: #EDEFF4;display: block;padding: 5px;"><table cellspacing="0" cellpadding="0" border="0"><tr><td valign="top"><img src="http://www.facebook.com/images/icons/fbpage.gif" alt=""/></td><td valign="top"><p style="color: #808080;font-family: verdana;font-size: 11px;margin: 0px 0px 0px 0px;padding: 0px 8px 0px 8px;"><a href="http://www.facebook.com/mpreshman" target="_TOP" style="color: #3B5998;font-family: verdana;font-size: 11px;font-weight: normal;margin: 0px;padding: 0px 0px 0px 0px;text-decoration: none;" title="Mike Preshman">Mike Preshman</a> likes</p></td></tr></table></div><div style="background: #FFFFFF;clear: both;display: block;margin: 0px;overflow: hidden;padding: 5px;"><table cellspacing="0" cellpadding="0" border="0"><tr><td valign="middle"><a href="http://www.facebook.com/capitalfactory" target="_TOP" style="border: 0px;color: #3B5998;font-family: verdana;font-size: 12px;font-weight: bold;margin: 0px;padding: 0px;text-decoration: none;" title="Capital Factory"><img src="http://www.facebook.com/profile/pic.php?oid=AAAAAwAgACAAAAALmiea9bc7C3Ge-fIMvQdTBVFF9vrKMAt6Z0r6hXehCOtBEkBPYfleAGuDKhMHntteIpmS6uIudvvE50UDTHKd2hrTh004M5ZHM_xaA2ECF4oAMu4VS1Na3DPn2b4NOFw8&size=square" style="border: 0px;margin: 0px;padding: 0px;" alt="Capital Factory"/></a></td><td valign="middle" style="padding: 0px 8px 0px 8px;"><a href="http://www.facebook.com/capitalfactory" target="_TOP" style="border: 0px;color: #3B5998;font-family: verdana;font-size: 12px;font-weight: bold;margin: 0px;padding: 0px;text-decoration: none;" title="Capital Factory">Capital Factory</a></td></tr></table></div></div><div style="display: block;float: right;margin: 0px;padding: 4px 0px 0px 0px;"><a href="http://www.facebook.com/badges/like.php" target="_TOP" style="color: #3B5998;font-family: verdana;font-size: 11px;font-weight: none;margin: 0px;padding: 0px;text-decoration: none;" title="Create your Like Badge">Create your Like Badge</a></div></div><!-- Facebook Like Badge END --></body>
 </html>
