--- a/static/css/campaign_launch.css
+++ b/static/css/campaign_launch.css
@@ -1,6 +1,6 @@
 #widget-wrapper {
    background-color: #dddddd;
-   height: 500px;
+   height: 600px;
 }
 
 #widget-features {
@@ -25,6 +25,7 @@
 
 #widget {
 border: 1px solid black; 
+text-align: center;
 }
 
 div#widget-features input[type=text] {
@@ -46,4 +47,13 @@ textarea#code {
    width: 98%;
    height: 97%%;
    color: black;
+}
+
+textarea#widget-message {
+   color: black;
+   font-size: 13px;
+}
+
+ul {
+padding: 0;
 }
