Fixing up some minor tweeks.

--- a/core/templates/campaign_launch.html
+++ b/core/templates/campaign_launch.html
@@ -45,18 +45,18 @@
 <ul>
 <li>
     <label for="height">Height:&nbsp;&nbsp; </label>
-    <input type="text" value="200" size="3" name="widget-height" id="widget-height"/>&nbsp;px
+    <input type="text" value="35" size="3" name="widget-height" id="widget-height"/>&nbsp;px
   <div style="width: 160px; float: right;" id="height-slider"></div>
 </li>
 <li>
     <label for="width">Width:&nbsp;&nbsp; </label>
-    <input type="text" value="200" size="3" name="widget-width" id="widget-width"/>&nbsp;px
+    <input type="text" value="258" size="3" name="widget-width" id="widget-width"/>&nbsp;px
   <div style="width: 160px; float: right;" id="width-slider"></div>
 </li>
 
 <li>
     <label for="widget-background-color">Background Color:&nbsp;&nbsp; </label>
-    <input type="color" value="red" size="10" name="widget-background-color" id="widget-background-color"/>
+    <input type="color" value="#d2f6d0" size="10" name="widget-background-color" id="widget-background-color"/>
     <button id="hide-color" style="display:none;">Hide</button>
     <div id="picker" style="display:none; border: 1px solid gray; text-alighn: center; padding-left: 50px;"></div>
 </li>
@@ -73,7 +73,7 @@
 </li>
 <li>
     <label for="widget-text-size">Text Size:&nbsp;&nbsp; </label>
-    <input type="text" value="14" size="3" name="widget-text-size" id="widget-text-size"/>&nbsp;px
+    <input type="text" value="27" size="3" name="widget-text-size" id="widget-text-size"/>&nbsp;px
   <div style="width: 160px; float: right;" id="text-size-slider"></div>
 <li></li>
 
