fixed redeem link

--- a/core/templates/campaign_page.html
+++ b/core/templates/campaign_page.html
@@ -126,8 +126,8 @@
 			<div id="okay"><img src="{% url static 'images/done.png' %}"></div>
 		</div>
 		
-			<BR /><BR />
-			<div id="code-msg">Thanks! You've shared your discount with your friends.<BR><BR>
+			<BR />
+			<div id="code-msg">Thanks! You've shared your discount with your friends.<BR>
 			Here’s your discount code:
 			</div>      	
 			
