--- a/core/templates/campaign_launch.html
+++ b/core/templates/campaign_launch.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 	{% block  js_css_include %}
-
+        <script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}" ></script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.1.custom.js' %}"></script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" >	
 	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.4.custom.min.js' %}"></script>
+
 
 
  	<link rel="stylesheet" href="{% url static 'css/campaign_launch.css' %}" type="text/css" />
@@ -77,7 +78,11 @@
   <div style="width: 160px; float: right;" id="text-size-slider"></div>
 <li></li>
 
-<li></li>
+<li>
+    <label for="widget-background-image">Background Image &nbsp;&nbsp;</label>
+   <button id="widget-remove-img" style="display:none;">Remove Img</button>
+    <input name="widget-background-image" id="widget-background-image" type="file"> </input>
+</li>
 </ul>
 <button id="getcode"></button>
 </div>
@@ -96,6 +101,24 @@
 Back To Admin Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}">{{admin_url}}</a><br/>
 </div>
 <script>
+
+  // background image
+  $("#widget-remove-img").click(function() {
+  alert($("#widget-background-image").val());
+      $("#widget").css({'background-image': 'none'});
+            $("#widget-remove-img").hide();
+  });
+
+  $("#widget-background-image").change(function() {
+            var url = "{{host}}{%url static 'images/campaign/logos/widget/'%}{{campaign.id}}";
+            ajaxFileUpload("widget-background-image", function() {
+                    $("#widget").css({'background-image':'url(' + url + ')'})
+                }, 
+                {{campaign.id}});
+            $("#widget-remove-img").show();
+            $("#widget-background-image").val(url);
+  }); 
+
   $("#getcode").text("<Get Embeddable Code>");
   $("#widget").css({"height" : parseInt($("#widget-height").val()),
                    "width" : parseInt($("#widget-width").val()),
@@ -165,6 +188,7 @@ font-size: " + $("#widget").css('font-size')+ "px; \
 text-align: center; \
 border: 2px solid black; \
 background-color: " + $("#widget").css('background-color') + ";'> \
+background-image: " + $("#widget").css('background-image') + ";'> \
 " + $("#widget").text() + " \
 </div></a>");
 
