--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -11,7 +11,15 @@
 
 {% block site-content %}
 <div id="parent-about">
-HAAAAAAHI
+<div class="person">
+<div class="photo">Photo</div>
+<div class="content">Albert Chow - CEO </div>
+</div>
+
+<div class="person">
+<div class="photo">Photo</div>
+<div class="content">Mike Preshman - CTO</div>
+</div>
 </div>
 
 
