--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -17,7 +17,7 @@
 <li>Analytics: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{analytics_url}}" target="analytics">{{analytics_url}}</a><br/></li>
 <li>Edit: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{update_url}}" target="update">{{update_url}}</a><br/></li>
 <li>Admin: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}" target="admin">{{admin_url}}</a><br/></li>
-<li>Launch: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{launch_url}}" target="launch">{{launch_url}}</a><br/></li>
+<li>Embeddable Widget: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{launch_url}}" target="launch">{{launch_url}}</a><br/></li>
 <ul>
 
 </div>
