Updating edit ajax call.

--- a/core/templates/campaign_admin.html
+++ b/core/templates/campaign_admin.html
@@ -15,6 +15,7 @@
 
 <div id="admin_console" class="create">
 <h1>Admin Console</h1>
+<h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
 
 <ul>
 <li>
