--- a/core/templates/campaign_created.html
+++ b/core/templates/campaign_created.html
@@ -11,6 +11,7 @@
 
 <div id="create-thanks" class="create">
 <h1>Promotion Created</h1>
+<h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
 
 <ul>
 <li>Landing Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{landing_url}}" target="landing">{{landing_url}}</a><br/></li>
