--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -32,7 +32,7 @@
 
 <div id="update-campaign" class="create">
 	<h1>Edit Campaign</h1>
-
+<h4 style="text-align:center;">Promotion Type - {{campaign.campaign_type}}</h4>
 	<form id="update-campaign-form" action="" method="post">	
 
 		<ul>		
