--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -6,7 +6,6 @@
 	<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}"> </script>
-	<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}"> </script>
 	<script type="text/javascript" src="{% url static 'javascript/jquery.showLoading.js' %}" ></script>	
@@ -18,16 +17,14 @@
 	<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" >	
 	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 
-
  	<link rel="stylesheet" href="{% url static 'css/campaign_admin.css' %}" type="text/css" />
  	<link rel="stylesheet" href="{% url static 'css/create.css' %}" type="text/css" />
 	{% endblock %}
 
-{% block title %}Admin Console.{% endblock %}
+{% block title %}Admin Console (Edit).{% endblock %}
 
 
 {% block site-content %}
-
 <br/><br/><br/>
 
 <div id="update-campaign" class="create">
@@ -106,10 +103,15 @@
 				<input type="text" value="{{campaign.facebook_fan_page}}" size="60" name="facebook_fan" />
 			</li>
                         <li id="li-prize-image">
- 			<label for="prize-wrapper">Image of Prize: </label> 
-                                   <div id="prize-wrapper" style="height: 250px; width: 60%;">
-				    <div style="float: left;"><input name="prize-image" id="prize-image" type="file" onChange="ajaxFileUpload(this.value);"> </input></div>
-				    <div style="float: right; background-color: #eeeeee; border: 2px solid black; height: 246px; width: 250px; text-align: center;" id="prize-image_preview"><br/><br/><br/><br/>Image Preview</div>
+ 			<label for="prize-wrapper">Image of Prize:</label>
+                                   <div id="prize-wrapper" style="height: 250px; width: 60%; position: relative;">
+				    <div style="float: left; width: 30%;"><br/><br /><input name="prize-image" id="prize-image" type="file"> </input> <br/><br/>OR <br /><br /> <button type="button" id="choose-img-url">Choose Url of Image</button><br/><br/>
+				    <div id="choose-img-http" style="display:none;"><input type="text" size="15" name="url-img-input" id="url-img-input" /><br/><button type="button" id="select-url-img-input">Select</button></div>
+                                    </div>
+
+				    <div style="float: right; background-color: #eeeeee; border: 2px solid black; height: 246px; width: 250px; text-align: center;" id="prize-image-preview"><br/><br/><br/><br/>Image Preview</div>
+                                 
+				    <button type="button" id="prize-remove-image" style="position: absolute; right: 0px; bottom: 0px; display: none;">Remove Image</button>
                                   </div>
 			</li>
 
@@ -133,10 +135,43 @@ Back To Admin Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}">{{admin_url}
 </li>
 
 </div>
+
+
 <script>
+
+
+// file upload
+$('#choose-img-url').click(function() {
+$("#choose-img-http").slideDown();
+});
+
+$('#select-url-img-input').click(function(){
+             $("#prize-image-preview").html("<img id='img-img-preview' style='width: 100%; height: 246px;' src=" + $('#url-img-input').val() + "/>");
+             $("#prize-remove-image").show();
+$("#prize-remove-image").click(function() {
+            $("#prize-image-preview").html("<br/><br/><br/><br/>Image Preview<img id='img-img-preview' src=''/>");
+            $("#prize-remove-img").hide();
+});
+});
+
+
+$("#prize-image").change(function() {
+            var url = "{{host}}{%url static 'images/campaign/logos/prize/'%}{{campaign.id}}";
+            
+            ajaxFileUpload("prize-image", function() {
+                    $("#prize-image-preview").html("<img id='img-img-preview' style='width: 100%; height: 246px;' src=" + url + "/>");
+                    $("#prize-remove-image").show();
+$("#prize-remove-image").click(function() {
+            $("#prize-image-preview").html("<br/><br/><br/><br/>Image Preview<img id='img-img-preview' src=''/>");
+            $("#prize-remove-img").hide();
+});
+                }, 
+                {{campaign.id}}, "prize");
+  });
+
 ////////////////////////////////////////////////
 if ('{{campaign.campaign_type}}' == 'discount'){
-
+   $('#li-prize-image').hide();
 }
 
 ///////////////////////////////////////////////
@@ -166,6 +201,7 @@ $(document).ready(function() {
 		$inputs.each(function() {
 		        values[this.name] = $(this).val();
 		});
+                values["url_redeem"] = $("#img-img-preview").attr("src");
 
 		$.ajax({
 			url: '{% url campaign_update_ajax %}?chash={{campaign.chash}}', 
