--- a/core/templates/test.html
+++ b/core/templates/test.html
@@ -171,7 +171,7 @@ $(document).ready(function() {
 
 
 </script>							
-
+<button>HI</button>
 <html>
 <body>
 <a target='ripple' href='http://bit.ly/brVgWk'><div style='width: 258px; height: 35px; color: rgb(0, 0, 0); font-size: 27pxpx; text-align: center; border: 2px solid black; background-color: rgb(210, 246, 208);'> 50% off Discount </div></a>
