--- a/core/templates/campaign_edit.html
+++ b/core/templates/campaign_edit.html
@@ -109,8 +109,16 @@
 				    <div id="choose-img-http" style="display:none;"><input type="text" size="15" name="url-img-input" id="url-img-input" /><br/><button type="button" id="select-url-img-input">Select</button></div>
                                     </div>
 
-				    <div style="float: right; background-color: #eeeeee; border: 2px solid black; height: 246px; width: 250px; text-align: center;" id="prize-image-preview"><br/><br/><br/><br/>Image Preview</div>
+				    <div style="float: right; background-color: #eeeeee; border: 2px solid black; height: 246px; width: 250px; text-align: center;" id="prize-image-preview">
+
+				    {% if campaign.url_redeem %}  
+                                    <img id='img-img-preview' style='width: 100%; height: 246px;' src='{{campaign.url_redeem}}'/>
+                                    {% else %}
+                                    <br/><br/><br/><br/>Image Preview
+                                    {% endif %}
+                                    </div>
                                  
+
 				    <button type="button" id="prize-remove-image" style="position: absolute; right: 0px; bottom: 0px; display: none;">Remove Image</button>
                                   </div>
 			</li>
@@ -139,6 +147,15 @@ Back To Admin Page: &nbsp;&nbsp;&nbsp;&nbsp;<a href="{{admin_url}}">{{admin_url}
 
 <script>
 
+          {% if campaign.url_redeem %}
+            $("#prize-remove-image").show();
+            $("#prize-remove-image").click(function() {
+            $("#prize-image-preview").html("<br/><br/><br/><br/>Image Preview<img id='img-img-preview' src=''/>");
+            $("#prize-remove-imageg").hide();
+            }); 
+          {% endif %}
+                                    
+
 
 // file upload
 $('#choose-img-url').click(function() {
@@ -150,7 +167,7 @@ $('#select-url-img-input').click(function(){
              $("#prize-remove-image").show();
 $("#prize-remove-image").click(function() {
             $("#prize-image-preview").html("<br/><br/><br/><br/>Image Preview<img id='img-img-preview' src=''/>");
-            $("#prize-remove-img").hide();
+            $("#prize-remove-image").hide();
 });
 });
 
@@ -163,7 +180,7 @@ $("#prize-image").change(function() {
                     $("#prize-remove-image").show();
 $("#prize-remove-image").click(function() {
             $("#prize-image-preview").html("<br/><br/><br/><br/>Image Preview<img id='img-img-preview' src=''/>");
-            $("#prize-remove-img").hide();
+            $("#prize-remove-image").hide();
 });
                 }, 
                 {{campaign.id}}, "prize");
