--- a/static/css/landingA.css
+++ b/static/css/landingA.css
@@ -48,15 +48,33 @@
 {
 	float: left;
 }
-#twitter-login-share, #facebook-login-share
+.badge-button
 {
 	cursor: pointer;
-	padding-left: 10px;
 	margin-right: 10px;
+	padding-bottom: 5px;
 }
-#twitter-login-share img, #facebook-login-share img{
-	height: 46px;
-	width: 35px;
+.badge-button span
+{
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 30px;
+}
+
+#facebook-login-share span
+{
+	color: #3757A0;
+}
+
+#twitter-login-share span
+{
+	color: #36B7D9
+}
+
+.badge-button img{
+	width: 30px;
+	vertical-align: middle;
+	margin-right: 5px;
 }
 
 #callMsg{
@@ -139,7 +157,7 @@
 	margin-left: 10px;
 }
 #ifra {
-       height: 500px; 
+       height: 00px; 
        border:2px double #0074A0;
 }
 
