--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="{% url static 'css/showLoading.css' %}" type="text/css" />	
     <link rel="stylesheet" href="{% url static 'css/blueprint/typography.css' %}" type="text/css" />	
-    <link rel="stylesheet" href="{% url static 'css/overlay.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% url static 'css/overlayA.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% url static 'css/landingA.css' %}" type="text/css" />
 
 
@@ -49,19 +49,26 @@
                   <script src="http://connect.facebook.net/en_US/all.js"></script>
 		  <div id="fb-root"></div>
                   {% if fbuser %}
-		      <img id="facebook-share" src="{% url static 'images/facebookShare_icon.png' %}"/>
+		      <button id="facebook-share" class="badge-button">
+		           <img src="{% url static 'images/facebookShare_icon2.png' %}"/><span>Share</span>
+		      </button>
 		  {% else %}
-		      <img id="facebook-login" src="{% url static 'images/facebookShare_icon.png' %}"/>
+		      <button id="facebook-login" class="badge-button">
+		           <img src="{% url static 'images/facebookShare_icon2.png' %}"/><span>Share</span>
+		      </button>
                   {% endif %}
 	     </div>  
 
 	     <div id="twitter-login-share">
                  {% if user %}
-		     <img id="twitter-share" src="{% url static 'images/twitterShare_icon.png' %}"/>
+		     <button id="twitter-share" class="badge-button">
+		           <img src="{% url static 'images/twitterShare_icon2.png' %}"/><span>Share</span>
+		     </button>
                  {% else %}
-                     <a href="{% url tauth_login %}?redirectArgs=overlayEQUALStwitter">
-		         <img id="twitter-login2" src="{% url static 'images/twitterShare_icon.png' %}" />
-		     </a>
+                     <button onClick="location.href='{% url tauth_login %}?redirectArgs=overlayEQUALStwitter'" class="badge-button">
+		         <img id="twitter-login2" src="{% url static 'images/twitterShare_icon2.png' %}" />
+			 <span>Share</span>
+		     </button>
                  {% endif %}
              </div>
 	    <h3><p id="callMsg">{{campaign.message}}</p></h3>
@@ -71,56 +78,46 @@
 
 	<div id="divider">
 	    <div id ="logo"><img height="35px" src="{% url static 'images/rf-logo.png' %}"></div>
-	    {% if fbuser %}
-	    <div id="floggedin">
-	        <fb:profile-pic id="facebook-profile-image" height="30px" width="30px" uid={{fbuser.facebook_id}} linked="false" >
-		</fb:profile-pic> 
-		<a id="flogout" href="">logout</a>
-	    </div>
-	    {% endif %}
-	    {% if user %}
-	    <div id="tloggedin">
-		<img id="twitter-profile-image" src="{{user.profile_pic}}" />
-		<a id="tlogout" href="{% url tauth_logout %}">logout</a>
-	    </div>
-	    {% endif %}
-
+	
 	</div>
 
 
-<div id="overlay-blogger-login" class="overlay-blogger">
-	<div id="overlay-div-content1"></div>
+	<div id="overlay-blogger-login" class="overlay-blogger">
 
 	<div id="overlay-div-content2-facebook" >
 		<div class="overlay-top">
-			<img src="{% url static 'images/step2-msg.png' %}">  
+		     <p>Discounts Are Better When You Share Them</p>  
 		</div>
 		<div id="facebook-top-msg">
-			<img src="{% url static 'images/facebook-share-msg.png' %}">
+		     <p>Share to Reveal Discount</p>
 		</div>
-		<textarea id="overlay-textarea-facebook">{{campaign.message_share}}</textarea>
-		<div id="facebook-div-feed-update"><img src="{% url static 'images/share.png' %}" id="facebook-feed-update"></div>
+		<div class="textarea-div">
+		     <textarea id="overlay-textarea-facebook">{{campaign.message_share}}</textarea>
+		</div>
+		<div id="facebook-feed-update" class="share-button"><p>Share</p></div>
 	</div>
 	
 	<div id="overlay-div-content2-twitter">
 		<div class="overlay-top">
-			<img src="{% url static 'images/step2-msg.png' %}">  
+		     <p>Discounts Are Better When You Share Them</p>  
 		</div>
 		
 		<div id="twitter-top-msg">
-			<img src="{% url static 'images/twitter-share-msg.png' %}">
+		     <p>Share to Reveal Discount</p>
 		</div>
-		<textarea id="overlay-textarea-twitter" >{{campaign.message_share}}</textarea>
-		<div id="twitter-div-feed-update"><img src="{% url static 'images/share.png' %}" id="twitter-feed-update"></div>
-
+		<div class="textarea-div">
+		     <textarea id="overlay-textarea-twitter" >{{campaign.message_share}}</textarea>
+		</div>
+		<div id="twitter-feed-update" class="share-button"><p>Share</p></div>
 	</div>
 
 	<div id="overlay-div-content3" >
-
-		<div class="overlay-top"><img src="{% url static 'images/step3-msg.png' %}"></div>
+		<div class="overlay-top">
+		     <p>Discount Code</p>
+		</div>
 		<div id="code-msg">Thanks for sharing.<BR> Here is your discount code:</div>
 		<div id="code">
-		    <p>{{campaign.code}}</p>
+		    <p id="discount-code">{{campaign.code}}</p>
 		    <div id="d_clip_container" style="position:relative">
 		        <button type="button" id="d_clip_button">Copy to Clipboard</button>
 		    </div>
@@ -242,7 +239,6 @@ function pageOverlay(page, type){
     {
     case 1:
 	contentView = 1;
-	$('#overlay-div-content1').show();
         $('#overlay-div-content2-facebook').hide();
         $('#overlay-div-content2-twitter').hide();
         $('#overlay-div-content3').hide();
@@ -250,12 +246,10 @@ function pageOverlay(page, type){
     case 2:
         contentView = 2;
 	if (type == 'facebook') {
-	    $('#overlay-div-content1').hide();
 	    $('#overlay-div-content2-facebook').show();
 	    $('#overlay-div-content2-twitter').hide();
 	    $('#overlay-div-content3').hide();
 	} else {
-	    $('#overlay-div-content1').hide();
 	    $('#overlay-div-content2-facebook').hide();
 	    $('#overlay-div-content2-twitter').show();
 	    $('#overlay-div-content3').hide();
@@ -263,7 +257,6 @@ function pageOverlay(page, type){
 	break;
     case 3:
         contentView = 3;
-	$('#overlay-div-content1').hide();
         $('#overlay-div-content2-facebook').hide();
         $('#overlay-div-content2-twitter').hide();
         $('#overlay-div-content3').show();
