--- a/core/templates/campaign_page2.html
+++ b/core/templates/campaign_page2.html
@@ -97,10 +97,19 @@
 
 	<div id="overlay-div-content2-facebook" >
 		<div class="overlay-top">
-		     <p>Discounts Are Better When You Share Them</p>  
+                     {%ifequal campaign.campaign.type "discount" %}
+		     <p>Discounts Are Better When You Share Them</p>
+                     {% else %}  
+		     <p>Share and win, it's that simple</p>
+		     {% endifequal %}
 		</div>
 		<div id="facebook-top-msg">
+                     {%ifequal campaign.campaign.type "discount" %}
 		     <p>Share to Reveal Discount</p>
+                     {% else %}  
+		     <p>Share to enter contest</p>
+		     {% endifequal %}
+
 		</div>
 		<div class="textarea-div">
 		     <textarea id="overlay-textarea-facebook">{{campaign.message_share}}</textarea>
@@ -110,11 +119,19 @@
 	
 	<div id="overlay-div-content2-twitter">
 		<div class="overlay-top">
-		     <p>Discounts Are Better When You Share Them</p>  
+                     {%ifequal campaign.campaign.type "discount" %}
+		     <p>Discounts Are Better When You Share Them</p>
+                     {% else %}  
+		     <p>Share and win, it's that simple</p>
+		     {% endifequal %}
 		</div>
 		
 		<div id="twitter-top-msg">
+                     {%ifequal campaign.campaign.type "discount" %}
 		     <p>Share to Reveal Discount</p>
+                     {% else %}  
+		     <p>Share to enter contest</p>
+		     {% endifequal %}
 		</div>
 		<div class="textarea-div">
 		     <textarea id="overlay-textarea-twitter" >{{campaign.message_share}}</textarea>
@@ -124,8 +141,14 @@
 
 	<div id="overlay-div-content3" >
 		<div class="overlay-top">
+                     {%ifequal campaign.campaign.type "discount" %}
 		     <p>Discount Code</p>
+                     {% else %}
+  		     <p>Successfully Entered Contest</p>
+		     {% endifequal %}
 		</div>
+
+                {%ifequal campaign.campaign.type "discount" %}
 		<div id="code-msg">Thanks for sharing.<BR> Here is your discount code:</div>
 		<div id="code">
 		    <p id="discount-code">{{campaign.code}}</p>
@@ -133,6 +156,11 @@
 		        <button type="button" id="d_clip_button">Copy to Clipboard</button>
 		    </div>
 		    <span>Redeem Here:</span><a href="{{campaign.url_redeem}}">{{campaign.url_redeem}}</a></font></div>
+		{% else %}
+                <div id="code-msg">Thanks for sharing.<BR> You have entered raffle:</div>
+		<img id="img-prize" src="{{campaign.url_redeem}}" />
+
+                {% endifequal %}
 
 	</div>
 
